--- a/app/assets/stylesheets/public/home.css.scss
+++ b/app/assets/stylesheets/public/home.css.scss
@@ -253,7 +253,11 @@ ul.navavatar>li {float:left; list-style:none; margin:0;padding:0; height:40px; l
 /*  #search_field {width:20em}*/
 }	
 @media screen and (min-width: 979px) and (max-width: 1200px) {
-  .navbar .form-search {position:relative;top:-40px;}
+  .navbar .form-search {position:relative;top:0; /*outline:lime 2px solid;*/}
+  ul.nav {
+  	position: relative;
+  	top:0;
+  }
 }
 
 @media screen and (min-width: 979px) {
@@ -287,3 +291,4 @@ ul.navavatar>li {float:left; list-style:none; margin:0;padding:0; height:40px; l
   .brand {padding-left:20px;}
   .title {font-size:28px;}
 }
+
